--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/native-stack": "^7.1.10",
+    "axios": "^1.7.8",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-hook-form": "^7.53.2",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
