--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.9",
     "@react-navigation/native-stack": "^7.1.10",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.8",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
@@ -20,9 +21,11 @@
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0"
+    "react-native-screens": "^4.3.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
