--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.8",
     "expo": "~52.0.11",
+    "expo-blur": "^14.0.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
