--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^7.0.9",
     "@react-navigation/native-stack": "^7.1.10",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.8",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "dotenv": "^16.4.6",
     "expo": "~52.0.11",
     "expo-blur": "^14.0.1",
     "expo-status-bar": "~2.0.0",
@@ -21,6 +24,8 @@
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
+    "react-native-config": "^1.5.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-paper": "^5.12.5",
@@ -31,7 +36,9 @@
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/metro-config": "^0.19.5",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
